# couchbase-cxx-encryption

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: linters.yml  tests.yml
cmake/: Documentation.cmake  Packaging.cmake  Testing.cmake  VersionInfo.cmake  build_version.hxx.in  couchbase_cxx_encryption.pc.in
couchbase_encryption/: aead_aes_256_cbc_hmac_sha512_provider.hxx  decrypter.hxx  default_manager.hxx  default_transcoder.hxx  document.hxx  encrypted_fields.hxx  encrypter.hxx  encryption_result.hxx  insecure_keyring.hxx  key.hxx  keyring.hxx  manager.hxx  transcoder.hxx
couchbase_encryption/impl/: aead_aes_256_cbc_hmac_sha512_provider.cxx  default_manager.cxx  document.cxx  encryption_result.cxx  insecure_keyring.cxx  key.cxx  transcoder.cxx
couchbase_encryption/impl/utils/: base64.h  json.hxx
docs/: Doxyfile.in  mainpage.hxx  stability.hxx
examples/: CMakeLists.txt  crypto_document.cxx  custom_transcoder.cxx  minimal.cxx  user_defined_type.cxx
include/couchbase_encryption/: decrypter.hxx  default_manager.hxx  document.hxx  encrypted_fields.hxx  encrypter.hxx  encryption_result.hxx  insecure_keyring.hxx  keyring.hxx  manager.hxx
src/: aead_aes_256_cbc_hmac_sha512_provider.cxx  default_manager.cxx  insecure_keyring.cxx
src/utils/: base64.cc  json.cxx  json.hxx
test/: CMakeLists.txt  profile.hxx  test_helper.hxx  test_helper_integration.hxx  test_integration_crypto_transcoder.cxx  test_unit_aead_aes_256_cbc_hmac_sha512_provider.cxx  test_unit_crypto_document.cxx  test_unit_crypto_transcoder.cxx  test_unit_keyring.cxx
test/document_types/: person.hxx  profile.hxx  simple_doc.hxx
test/utils/: CMakeLists.txt  binary.cxx  binary.hxx  crypto.cxx  crypto.hxx  integration_test_guard.cxx  integration_test_guard.hxx  logger.cxx  logger.hxx  server_version.cxx  server_version.hxx  test_context.cxx  test_context.hxx  test_data.cxx  test_data.hxx
